tests/expectations/compiler/finalize/get_or_incorrect_type_fail.out
DCE_ENABLED:
Error [ETYC0372117]: Expected type `Token` but type `u128` was found.
    --> compiler-test:16:43
     |
  16 |         Mapping::get_or_use(tokens, addr, amount);
     |                                           ^^^^^^
Error [ETYC0372117]: Expected type `Token` but type `u128` was found.
    --> compiler-test:17:33
     |
  17 |         tokens.get_or_use(addr, amount);
     |                                 ^^^^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:18:38
     |
  18 |         Mapping::get_or_use(amounts, 1u8, amount);
     |                                      ^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:19:28
     |
  19 |         amounts.get_or_use(1u8, amount);
     |                            ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:20:44
     |
  20 |         Mapping::get_or_use(amounts, addr, 1u8);
     |                                            ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:21:34
     |
  21 |         amounts.get_or_use(addr, 1u8);
     |                                  ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:22:72
     |
  22 |         Mapping::get_or_use(tokens, addr, Token { owner: addr, amount: 1u8 });
     |                                                                        ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:23:62
     |
  23 |         tokens.get_or_use(addr, Token { owner: addr, amount: 1u8 });
     |                                                              ^^^
Error [ETYC0372005]: Unknown variable `foo`
    --> compiler-test:24:29
     |
  24 |         Mapping::get_or_use(foo, addr, amount);
     |                             ^^^
Error [ETYC0372005]: Unknown variable `foo`
    --> compiler-test:25:9
     |
  25 |         foo.get_or_use(addr, amount);
     |         ^^^

DCE_DISABLED:
Error [ETYC0372117]: Expected type `Token` but type `u128` was found.
    --> compiler-test:16:43
     |
  16 |         Mapping::get_or_use(tokens, addr, amount);
     |                                           ^^^^^^
Error [ETYC0372117]: Expected type `Token` but type `u128` was found.
    --> compiler-test:17:33
     |
  17 |         tokens.get_or_use(addr, amount);
     |                                 ^^^^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:18:38
     |
  18 |         Mapping::get_or_use(amounts, 1u8, amount);
     |                                      ^^^
Error [ETYC0372117]: Expected type `address` but type `u8` was found.
    --> compiler-test:19:28
     |
  19 |         amounts.get_or_use(1u8, amount);
     |                            ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:20:44
     |
  20 |         Mapping::get_or_use(amounts, addr, 1u8);
     |                                            ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:21:34
     |
  21 |         amounts.get_or_use(addr, 1u8);
     |                                  ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:22:72
     |
  22 |         Mapping::get_or_use(tokens, addr, Token { owner: addr, amount: 1u8 });
     |                                                                        ^^^
Error [ETYC0372117]: Expected type `u128` but type `u8` was found.
    --> compiler-test:23:62
     |
  23 |         tokens.get_or_use(addr, Token { owner: addr, amount: 1u8 });
     |                                                              ^^^
Error [ETYC0372005]: Unknown variable `foo`
    --> compiler-test:24:29
     |
  24 |         Mapping::get_or_use(foo, addr, amount);
     |                             ^^^
Error [ETYC0372005]: Unknown variable `foo`
    --> compiler-test:25:9
     |
  25 |         foo.get_or_use(addr, amount);
     |         ^^^
